Similar compatibility fix for Safari older than 15.4; use `align-items: flex-end`, not `end`

--- a/src/app/my-account/my-account.component.scss
+++ b/src/app/my-account/my-account.component.scss
@@ -46,7 +46,7 @@ main > div {
 
 .logout-row {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   justify-content: right;
   gap: 17px;
 }
